[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Combat/Combat.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Font1.tres" type="DynamicFont" id=2]

[node name="Combat" type="Node2D"]
script = ExtResource( 1 )

[node name="SkipButton" type="Button" parent="."]
margin_left = 32.0
margin_top = 800.0
margin_right = 232.0
margin_bottom = 944.0
custom_fonts/font = ExtResource( 2 )
text = "Skip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionButton" type="Button" parent="."]
margin_left = 344.0
margin_top = 800.0
margin_right = 544.0
margin_bottom = 944.0
custom_fonts/font = ExtResource( 2 )
text = "Action"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpecialButton" type="Button" parent="."]
margin_left = 184.0
margin_top = 696.0
margin_right = 384.0
margin_bottom = 784.0
custom_fonts/font = ExtResource( 2 )
text = "Special"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealth" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 344.0
margin_bottom = 72.0
custom_fonts/normal_font = ExtResource( 2 )
text = "Player Health:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerEnergy" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 64.0
margin_right = 360.0
margin_bottom = 120.0
custom_fonts/normal_font = ExtResource( 2 )
text = "Player Enerygy:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerBlock" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 112.0
margin_right = 360.0
margin_bottom = 168.0
custom_fonts/normal_font = ExtResource( 2 )
text = "Player Block: "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiscardTotal" type="RichTextLabel" parent="."]
margin_left = 352.0
margin_top = 16.0
margin_right = 576.0
margin_bottom = 72.0
custom_fonts/normal_font = ExtResource( 2 )
text = "Discard:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawTotal" type="RichTextLabel" parent="."]
margin_left = 376.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 120.0
custom_fonts/normal_font = ExtResource( 2 )
text = "Draw:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardName" type="RichTextLabel" parent="."]
margin_left = 56.0
margin_top = 384.0
margin_right = 528.0
margin_bottom = 424.0
custom_fonts/normal_font = ExtResource( 2 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardCost" type="RichTextLabel" parent="."]
margin_left = 56.0
margin_top = 440.0
margin_right = 528.0
margin_bottom = 480.0
custom_fonts/normal_font = ExtResource( 2 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effect" type="RichTextLabel" parent="."]
margin_left = 56.0
margin_top = 520.0
margin_right = 528.0
margin_bottom = 664.0
custom_fonts/normal_font = ExtResource( 2 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonsterName" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 208.0
margin_right = 576.0
margin_bottom = 264.0
custom_fonts/normal_font = ExtResource( 2 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonsterEnergy" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 256.0
margin_right = 360.0
margin_bottom = 312.0
custom_fonts/normal_font = ExtResource( 2 )
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="SkipButton" to="." method="_on_SkipButton_pressed"]
[connection signal="pressed" from="ActionButton" to="." method="_on_ActionButton_pressed"]
[connection signal="pressed" from="SpecialButton" to="." method="_on_SpecialButton_pressed"]
